# Courier

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  test.yml
docs/: CHANGELOG.md
resources/lang/: en_US.json  zh_CN.json
src/: __init__.py  _meta.py  app.py  config.py  logger.py
src/gui/: __init__.py  basket_window.py  platform.py  settings_dialog.py  theme.py  thumbnail.py  tray_manager.py
src/utils/: __init__.py  file_basket.py  hotkey_manager.py  i18n.py  transfer.py  zip_utils.py
tests/: conftest.py  test_file_basket.py  test_transfer.py
