[project]
name = "courier"
version = "1.1.2"
description = "A lightweight cross-platform file staging tool with PySide6 GUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput>=1.8.2",
    "pyside6>=6.11.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "nuitka>=4.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
pretty = true
ignore_missing_imports = true
